--- a/EqUiWebUi/Web.config
+++ b/EqUiWebUi/Web.config
@@ -63,7 +63,7 @@
     <!--hangfire-->
     <add key="EnableHangfire" value="true" />
     <add key="HangfirePrepareSchemas" value="false" />
-    <add key="HangfireQueues" value="gadata" />
+    <add key="HangfireQueues" value="NOWORK" />
     <add key="HangfireDetailsBasepath" value="http://equi/hangfire/jobs/details/" />
     <!--Maximo  MOVE THIS TO MAXIMO AREA WEB.CONFIG!-->
     <add key="Maximo_ORGID" value="VCCBE" />
