initial test OK => moving it to production

--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -2273,8 +2273,9 @@
     <Content Include="Areas\HangfireArea\Views\c_job\_List.cshtml" />
     <Content Include="Areas\Alert\Views\c_triggers\_List.cshtml" />
     <Content Include="Areas\Alert\Views\Alert\_Legend.cshtml" />
-    <Content Include="App_Code\TiplifeHelpers.cshtml" />
+    <Content Include="App_Code\TiplifeHtmlHelpers.cshtml" />
     <Content Include="Areas\Tiplife\Views\Electrode\Index.cshtml" />
+    <Content Include="Areas\Tiplife\Views\Electrode\_Legend.cshtml" />
     <None Include="Properties\PublishProfiles\gensvw1178-DEV-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-VCTA.pubxml" />
