--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -3,14 +3,21 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="ExcelAddInEquipmentDatabase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ExcelAddInEquipmentDatabase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+                                                                                                                      </configSections>
   <connectionStrings>
-      <!--this is the MAIN connection string for EQUI (site specfic)-->
-      <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" />
-      <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
+      providerName="System.Data.SqlClient" />
+    <add name="GADATAUserRoleProvider" connectionString="metadata=res://*/UserManagment.csdl|res://*/UserManagment.ssdl|res://*/UserManagment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW"
+      connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
+    <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
+      connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -30,14 +37,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup><applicationSettings>
     <ExcelAddInEquipmentDatabase.Properties.Settings>
-      <setting name="IsPowerUser" serializeAs="String">
-        <value>False</value>
+      <setting name="Helpfile" serializeAs="String">
+        <value>https://sway.com/csCS9cdjEpcpPhw0?ref=Link</value>
       </setting>
-      <setting name="IsRobotgroup" serializeAs="String">
-        <value>False</value>
+      <setting name="EquiBasepath" serializeAs="String">
+        <value>http:\\gensvw1178.gen.volvocars.net</value>
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
-  </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup></configuration>
+  </applicationSettings>
+</configuration>
