--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -35,20 +35,29 @@
   </entityFramework>
 
   <!--Log4net setup-->
+
   <log4net>
-    <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-      <file value="C:\temp\EquiVsto.log" />
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="EquiVsto.log" />
       <appendToFile value="true" />
-      <maximumFileSize value="1MB" />
+      <rollingStyle value="Size" />
       <maxSizeRollBackups value="5" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{ABSOLUTE} [%thread] %level %logger - %message%newline%exception" />
+        <conversionPattern value="%date{ABSOLUTE} [%thread] %level %logger - %message%newline%exception"/>
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="DEBUG" />
+        <levelMax value="FATAL" />
+      </filter>
     </appender>
+
     <root>
-      <level value="INFO" />
-      <appender-ref ref="RollingFile" />
+      <level value="DEBUG" />
+      <appender-ref ref="RollingFileAppender" />
     </root>
+
   </log4net>
   
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup><applicationSettings>
